# aebn-vod-downloader

./: .gitignore  LICENSE  README.md  colab.ipynb  pyproject.toml
aebn_dl/: cli.py  custom_session.py  downloader.py  manifest_parser.py  models.py  movie_scraper.py  utils.py
tests/: base_test.py
