[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aebn_dl"]

[project]
name = "aebndl"
version = "0.8.0"
description = "aebn downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.11.3",
    "lxml>=5.4.0",
    "rich>=13.9.0",
    "typing-extensions >= 4.0.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["lxml-stubs"]

[project.scripts]
aebndl = "aebn_dl.cli:main"


[tool.ruff]
line-length = 200
