[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aebn_dl"]

[project]
name = "aebndl"
version = "0.10.0"
description = "aebn downloader"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.7.0",
    "lxml>=4.9.0",
    "rich>=12.0.0",
    "typing-extensions >= 4.0.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["lxml-stubs", "ruff"]

[project.scripts]
aebndl = "aebn_dl.cli:main"


[tool.ruff]
line-length = 200
