[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aebn_dl"]

[project]
name = "aebndl"
version = "0.10.1"
description = "aebn downloader"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.7.0",
    "lxml>=4.9.0",
    "rich>=12.0.0",
    "typing-extensions >= 4.0.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["lxml-stubs", "ruff"]

[project.scripts]
aebndl = "aebn_dl.cli:main"


[tool.ruff]
extend-exclude = ["colab.ipynb"]
line-length = 200
target-version = "py38"

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E4",   # pycodestyle imports
    "E7",   # pycodestyle statements
    "E9",   # pycodestyle runtime errors
    "E501", # line length
    "F",    # Pyflakes
    "I",    # isort
    "PIE",  # flake8-pie
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "SIM108", # Prefer readable if/else blocks over forced ternaries.
]
